{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 48,
  "lineage": "a7e8db61-64dd-7b9e-0090-db50caf89168",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:346707733166:instance/i-0a44daff412d04911",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a44daff412d04911",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "circle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00611dbb1edefaf65",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-3-84-43-63.compute-1.amazonaws.com",
            "public_ip": "3.84.43.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2043be25ee964d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-069680c9febb37ff4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0220d0b1cfca9e23a",
            "tags": {
              "Name": "server1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "server1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069680c9febb37ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:346707733166:instance/i-0e30d12e408649f9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e30d12e408649f9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "circle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0980e81507aebe12a",
            "private_dns": "ip-10-0-2-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.59",
            "public_dns": "ec2-54-234-48-124.compute-1.amazonaws.com",
            "public_ip": "54.234.48.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096188ccaf56d2de9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-069680c9febb37ff4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c649c7e735fe1185",
            "tags": {
              "Name": "server2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "server2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069680c9febb37ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:346707733166:instance/i-057e6173e8de0dac1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057e6173e8de0dac1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "circle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cdf6a2f1f0cbf57",
            "private_dns": "ip-10-0-1-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-44-203-127-216.compute-1.amazonaws.com",
            "public_ip": "44.203.127.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c90db9c0903703d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-069680c9febb37ff4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0220d0b1cfca9e23a",
            "tags": {
              "Name": "server3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "server3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069680c9febb37ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "server_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:internet-gateway/igw-0f8515cb682dbcc0e",
            "id": "igw-0f8515cb682dbcc0e",
            "owner_id": "346707733166",
            "tags": {
              "Name": "server_internet_gateway"
            },
            "tags_all": {
              "Name": "server_internet_gateway"
            },
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "server-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:loadbalancer/app/server-load-balancer/b8a75a8636c038f7",
            "arn_suffix": "app/server-load-balancer/b8a75a8636c038f7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "server-load-balancer-1481031761.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:loadbalancer/app/server-load-balancer/b8a75a8636c038f7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "server-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-050f5105a5e20200c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0220d0b1cfca9e23a"
              },
              {
                "subnet_id": "subnet-0c649c7e735fe1185"
              }
            ],
            "subnets": [
              "subnet-0220d0b1cfca9e23a",
              "subnet-0c649c7e735fe1185"
            ],
            "vpc_id": "vpc-0a8e83cc4f075946e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_instance.server2",
            "aws_instance.server3",
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "server-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:listener/app/server-load-balancer/b8a75a8636c038f7/748d65410b4df4b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:listener/app/server-load-balancer/b8a75a8636c038f7/748d65410b4df4b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:loadbalancer/app/server-load-balancer/b8a75a8636c038f7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.server1",
            "aws_instance.server2",
            "aws_instance.server3",
            "aws_lb.server-load-balancer",
            "aws_lb_target_group.server-target-group",
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "server-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:listener-rule/app/server-load-balancer/b8a75a8636c038f7/748d65410b4df4b7/7505a5bd65e7032f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "terraform-test.maiempire.online"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:listener-rule/app/server-load-balancer/b8a75a8636c038f7/748d65410b4df4b7/7505a5bd65e7032f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:listener/app/server-load-balancer/b8a75a8636c038f7/748d65410b4df4b7",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.server1",
            "aws_instance.server2",
            "aws_instance.server3",
            "aws_lb.server-load-balancer",
            "aws_lb_listener.server-listener",
            "aws_lb_target_group.server-target-group",
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "server-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
            "arn_suffix": "targetgroup/server-target-group/e810e5794fe33d82",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "server-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "server-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82-20230205134830525100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
            "target_id": "i-0a44daff412d04911"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_lb_target_group.server-target-group",
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "server-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82-20230205134830598800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
            "target_id": "i-0e30d12e408649f9b"
          },
          "dependencies": [
            "aws_instance.server2",
            "aws_lb_target_group.server-target-group",
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "server-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82-20230205134830689300000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346707733166:targetgroup/server-target-group/e810e5794fe33d82",
            "target_id": "i-057e6173e8de0dac1"
          },
          "dependencies": [
            "aws_instance.server3",
            "aws_lb_target_group.server-target-group",
            "aws_security_group.server-load_balancer_sg",
            "aws_security_group.server-security-grp-rule",
            "aws_subnet.server-public-subnet1",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "server-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:network-acl/acl-0827a97696f34fd8c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0827a97696f34fd8c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "346707733166",
            "subnet_ids": [
              "subnet-0220d0b1cfca9e23a",
              "subnet-0c649c7e735fe1185"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.server-public-subnet1",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "server-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:route-table/rtb-0e59715ed65a0bf5f",
            "id": "rtb-0e59715ed65a0bf5f",
            "owner_id": "346707733166",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8515cb682dbcc0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "server-route-table-public"
            },
            "tags_all": {
              "Name": "server-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.server_internet_gateway",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "server-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a764793156eafa5",
            "route_table_id": "rtb-0e59715ed65a0bf5f",
            "subnet_id": "subnet-0220d0b1cfca9e23a"
          },
          "dependencies": [
            "aws_internet_gateway.server_internet_gateway",
            "aws_route_table.server-route-table-public",
            "aws_subnet.server-public-subnet1",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "server-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f980cdee66508c68",
            "route_table_id": "rtb-0e59715ed65a0bf5f",
            "subnet_id": "subnet-0c649c7e735fe1185"
          },
          "dependencies": [
            "aws_internet_gateway.server_internet_gateway",
            "aws_route_table.server-route-table-public",
            "aws_subnet.server-public-subnet2",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:security-group/sg-050f5105a5e20200c",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-050f5105a5e20200c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "server-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "346707733166",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:security-group/sg-069680c9febb37ff4",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069680c9febb37ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050f5105a5e20200c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050f5105a5e20200c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "346707733166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-security-grp-rule"
            },
            "tags_all": {
              "Name": "server-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-load_balancer_sg",
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "server-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:subnet/subnet-0220d0b1cfca9e23a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0220d0b1cfca9e23a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346707733166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-public-subnet1"
            },
            "tags_all": {
              "Name": "server-public-subnet1"
            },
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "server-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:subnet/subnet-0c649c7e735fe1185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c649c7e735fe1185",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346707733166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-public-subnet2"
            },
            "tags_all": {
              "Name": "server-public-subnet2"
            },
            "vpc_id": "vpc-0a8e83cc4f075946e"
          },
          "dependencies": [
            "aws_vpc.server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346707733166:vpc/vpc-0a8e83cc4f075946e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-014beef5bcc342e58",
            "default_route_table_id": "rtb-0c3014b8f06469312",
            "default_security_group_id": "sg-05b950d9f378e8752",
            "dhcp_options_id": "dopt-0c2cbf4e45b4e6817",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8e83cc4f075946e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3014b8f06469312",
            "owner_id": "346707733166",
            "tags": {
              "Name": "server_vpc"
            },
            "tags_all": {
              "Name": "server_vpc"
            }
          }
        }
      ]
    }
  ]
}